apply requested changes
-Remove unused imports
-Fix formatting
-Replace generic argumentMatcher with type specific ones